--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -3,10 +3,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimary">#D2E175</color>
-    <color name="colorSecondary">#EDD662</color>  <!-- Accent (Yellow) -->
-    <color name="colorTertiary">#E54C50</color>   <!-- Accent (Red) -->
-    <color name="colorContrast">#EEEEEE</color>   <!-- Light text/icons -->
-    <color name="colorBase">#111111</color>       <!-- Main background -->
-    <color name="colorBaseField">#2A2A2A</color>  <!-- Input field background -->
+    <color name="colorPrimary">#4A6800</color>
+    <color name="colorSecondary">#C9A000</color>
+    <color name="colorTertiary">#D93A3E</color>
+    <color name="colorContrast">#222222</color>
+    <color name="colorBase">#F7F7F7</color>
+    <color name="colorBaseField">#EDEDED</color>
+
+
 </resources>
