Finish Profile Fragment

--- a/code/app/src/main/res/drawable/ic_profile.xml
+++ b/code/app/src/main/res/drawable/ic_profile.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="12">
   <path
       android:pathData="M12.5,6C12.5,9.314 9.814,12 6.5,12C3.186,12 0.5,9.314 0.5,6C0.5,2.686 3.186,0 6.5,0C9.814,0 12.5,2.686 12.5,6ZM8.3,4.2C8.3,5.194 7.494,6 6.5,6C5.506,6 4.7,5.194 4.7,4.2C4.7,3.206 5.506,2.4 6.5,2.4C7.494,2.4 8.3,3.206 8.3,4.2ZM6.5,11.1C7.57,11.1 8.564,10.77 9.384,10.207C9.746,9.958 9.901,9.484 9.691,9.098C9.254,8.298 8.354,7.8 6.5,7.8C4.646,7.8 3.746,8.298 3.309,9.098C3.099,9.484 3.253,9.958 3.616,10.207C4.436,10.77 5.43,11.1 6.5,11.1Z"
-      android:fillColor="@color/colorContrast"
+      android:fillColor="?attr/colorPrimary"
       android:fillType="evenOdd"/>
 </vector>
