--- a/code/app/src/main/res/drawable/ic_caret_right.xml
+++ b/code/app/src/main/res/drawable/ic_caret_right.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="13">
   <path
       android:pathData="M0.339,0.72C0.66,0.427 1.181,0.427 1.502,0.72L7.259,5.97C7.58,6.263 7.58,6.737 7.259,7.03L1.502,12.28C1.181,12.573 0.66,12.573 0.339,12.28C0.018,11.988 0.018,11.513 0.339,11.22L5.515,6.5L0.339,1.78C0.018,1.487 0.018,1.013 0.339,0.72Z"
-      android:fillColor="@color/colorContrast"
+      android:fillColor="?attr/colorPrimary"
       android:fillType="evenOdd"/>
 </vector>
