--- a/code/app/src/main/res/layout/activity_login.xml
+++ b/code/app/src/main/res/layout/activity_login.xml
@@ -29,55 +29,61 @@
             android:background="@drawable/gradient_bottom_overlay" />
     </FrameLayout>
 
+    <!-- title -->
     <LinearLayout
-        android:gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
+
         <TextView
-            style="@style/HeadingBold"
+            style="@style/TextBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:textSize="@dimen/text_xxx_large" />
     </LinearLayout>
 
+    <!-- action buttons -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="@dimen/space_xxx_large"
         android:gravity="bottom|center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/space_xxx_large">
+
         <TextView
-            style="@style/HeadingLight"
+            style="@style/TextLight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:letterSpacing="0.3"
             android:text="@string/welcome" />
+
         <Space
             android:layout_width="match_parent"
-            android:layout_height="@dimen/space_xxx_large"/>
+            android:layout_height="@dimen/space_xxx_large" />
+
         <Button
             style="@style/Button"
-            android:drawableEnd="@drawable/ic_caret_right"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/ic_caret_right"
             android:paddingStart="30dp"
             android:paddingEnd="16dp"
-            android:text="@string/email"
-            />
+            android:text="@string/email" />
+
         <Space
             android:layout_width="match_parent"
-            android:layout_height="@dimen/space_x_large"/>
+            android:layout_height="@dimen/space_x_large" />
+
         <Button
             style="@style/ButtonContrast"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/ic_google_logo"
             android:paddingStart="38dp"
             android:paddingEnd="14dp"
-            android:drawableEnd="@drawable/ic_google_logo"
-            android:text="@string/google"
-            />
+            android:text="@string/google" />
 
     </LinearLayout>
 
