--- a/code/app/src/main/res/layout/fragment_profile.xml
+++ b/code/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBase"
+    android:orientation="vertical"
+    android:padding="@dimen/space_xxx_large"
     tools:context=".view.fragments.ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- Top Profile Section -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="This is Profile Page" />
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/imgProfileAvatar"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_profile" />
+
+        <Space
+            android:layout_width="@dimen/space_medium"
+            android:layout_height="wrap_content" />
+
+        <!-- User Info Column -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txtAppName"
+                style="@style/TextLight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MealClue"
+                android:textSize="@dimen/text_small" />
+
+            <TextView
+                android:id="@+id/txtUserName"
+                style="@style/TextBold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tim Nguyen"
+                android:textColor="@color/colorContrast"
+                android:textSize="@dimen/text_large" />
+
+            <TextView
+                android:id="@+id/txtHeartCount"
+                style="@style/TextExtraLight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.5"
+                android:text="7,537 hearts"
+                android:textSize="@dimen/text_small" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/space_x_large" />
+    <!-- Meal Plan & Recipe Section -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txtPlanLabel"
+            style="@style/TextMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:letterSpacing="0.3"
+            android:text="@string/plan_name"
+            android:textAllCaps="true"
+            android:textColor="@color/colorSecondary"
+            android:textSize="@dimen/text_x_small" />
+
+
+        <!-- Recipe Image & Name -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="250dp">
+
+            <ImageView
+                android:id="@+id/recipeImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="0.7"
+                android:contentDescription="@string/login_background"
+                android:scaleType="centerCrop"
+                android:src="@drawable/login_background" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_gravity="bottom"
+                android:background="@drawable/gradient_bottom_overlay" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:backgroundTint="@android:color/transparent"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="@dimen/space_large">
+
+                <TextView
+                    android:id="@+id/txtMealType"
+                    style="@style/TextLight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lunch"
+                    android:textAllCaps="true"
+                    android:letterSpacing="0.4"
+                    android:textSize="@dimen/text_medium" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/space_medium" />
+
+                <TextView
+                    android:id="@+id/txtRecipeName"
+                    style="@style/TextMedium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/recipe_name"
+                    android:textSize="@dimen/text_x_large"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <ImageButton
+                android:contentDescription="@string/previous_recipe"
+                android:id="@+id/prevRecipeButton"
+                style="@style/ButtonField"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginStart="@dimen/text_xxx_small"
+                android:src="@drawable/ic_caret_left"
+                android:layout_gravity="center_vertical"
+                />
+            <ImageButton
+                android:contentDescription="@string/next_recipe"
+                android:id="@+id/nextRecipeButton"
+                style="@style/ButtonField"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginEnd="@dimen/text_xxx_small"
+                android:src="@drawable/ic_caret_right"
+                android:layout_gravity="center_vertical|end"
+                />
+        </FrameLayout>
+    </LinearLayout>
+
+    <!-- Cook & Delay Buttons -->
+    <Button
+        android:id="@+id/btnCook"
+        style="@style/ButtonPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableTop="@drawable/ic_pot"
+        android:text="@string/cook"
+        />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/space_medium"/>
+    <Button
+        android:id="@+id/btnDelay"
+        style="@style/ButtonBase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/delay" />
+</LinearLayout>
