--- a/code/app/src/main/res/values-night/themes.xml
+++ b/code/app/src/main/res/values-night/themes.xml
@@ -2,5 +2,15 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MealClue" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorOnPrimary">@color/colorBase</item>
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorOnSecondary">@color/colorContrast</item>
+        <item name="android:background">@color/colorBase</item>
+        <item name="colorOnBackground">@color/colorContrast</item>
+        <item name="android:textColor">@color/colorContrast</item>
+        <item name="fontFamily">@font/lexend_regular</item>
+        <item name="android:textSize">@dimen/text_medium</item>
+        <item name="materialButtonStyle">@style/Button</item>
     </style>
 </resources>
