--- a/code/app/src/main/res/layout/fragment_plan_list.xml
+++ b/code/app/src/main/res/layout/fragment_plan_list.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/wrapper_padding"
     tools:context=".view.fragments.PlanListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+    <Space style="@style/SpaceMedium"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            style="@style/ButtonField"
+            android:text="@string/back"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            />
+        <Space style="@style/SpaceMedium"/>
+        <Button
+            style="@style/ButtonBase"
+            android:text="@string/new_plan"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
