--- a/code/app/src/main/res/layout/fragment_plan_detail.xml
+++ b/code/app/src/main/res/layout/fragment_plan_detail.xml
@@ -1,14 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/wrapper_padding"
     tools:context=".view.fragments.PlanDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <!-- plan header -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/goalRibbonTextView"
+            style="@style/TextLight"
+            android:text="@string/goal"
+            android:textColor="@color/colorTertiary" />
+
+        <Space style="@style/SpaceMedium" />
+
+        <Button
+            style="@style/ButtonPrimary"
+            android:padding="@dimen/space_x_small"
+            android:text="@string/unset" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            style="@style/TextBold"
+            android:text="@string/plan_name"
+            android:textSize="@dimen/text_xx_large" />
+
+        <Space style="@style/SpaceMedium" />
+
+        <TextView
+            style="@style/TextLight"
+            android:text="@string/_5"
+            android:textSize="@dimen/text_xx_large" />
+
+        <Space style="@style/SpaceMedium" />
+
+        <ImageButton
+            android:layout_width="@dimen/text_large"
+            android:layout_height="@dimen/text_large"
+            android:backgroundTint="@android:color/transparent"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_pen" />
+    </LinearLayout>
+
+    <Space style="@style/SpaceMedium" />
+
+    <TextView
+        style="@style/TextLight"
+        android:text="@string/recipe_number" />
+
+    <Space style="@style/SpaceXLarge" />
+
+    <!-- plan content -->
+    <Button
+        style="@style/ButtonBase"
+        android:text="@string/add_to_top" />
+
+    <include layout="@layout/component_search_bar" />
+
+    <androidx.recyclerview.widget.RecyclerView
+
+        style="@style/ButtonField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Space style="@style/SpaceXLarge" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <Space style="@style/SpaceXLarge" />
+
+    <Button
+        style="@style/ButtonBase"
+        android:text="@string/add_top_bottom" />
+
+    <Button
+        style="@style/ButtonField"
+        android:text="@string/back"/>
+</LinearLayout>
