--- a/code/app/src/main/res/layout/fragment_settings.xml
+++ b/code/app/src/main/res/layout/fragment_settings.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/wrapper_padding"
     tools:context=".view.fragments.SettingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <include layout="@layout/component_profile_header" />
+    <Space style="@style/SpaceXXLarge"/>
+    <include layout="@layout/component_labeled_input_text"  />
+    <Space style="@style/SpaceXLarge"/>
+    <include layout="@layout/component_labeled_input_text"  />
+    <Space style="@style/SpaceXLarge"/>
+    <include layout="@layout/component_labeled_input_text"  />
+    <Space style="@style/SpaceXLarge"/>
+    <include layout="@layout/component_labeled_input_text"  />
 
-</FrameLayout>
+</LinearLayout>
