--- a/code/app/src/main/res/layout/activity_main.xml
+++ b/code/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,8 @@
     android:layout_height="match_parent"
     tools:context=".view.activities.MainActivity">
 
-    <!-- Navigation Host Fragment -->
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
+        android:id="@+id/frgMain"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -18,15 +17,14 @@
         android:layout_weight="1"
         app:navGraph="@navigation/navigation_graph" />
 
-    <!-- Bottom Navigation Bar -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
+        android:id="@+id/navMainMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         app:itemBackground="@android:color/transparent"
         app:labelVisibilityMode="labeled"
-        app:menu="@menu/bottom_nav_menu"
+        app:menu="@menu/menu_main"
         app:itemIconTint="@color/nav_colors"
         app:itemTextColor="@color/nav_colors"
         app:itemActiveIndicatorStyle="@android:color/transparent"
